<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:padding="16dp">

        <!-- Center the Card in the screen -->
        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="160dp"
            android:text="@string/login_text"
            android:textColor="#333"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/login_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:background="@drawable/login_card"
            android:padding="24dp"
            android:gravity="center">

            <!-- Email Input -->
            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:drawableStart="@drawable/login_ic_email"
                android:drawablePadding="12dp"
                android:padding="12dp"
                android:background="@drawable/login_input_background"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <!-- Password Input -->
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:drawableStart="@drawable/login_ic_password"
                android:drawablePadding="12dp"
                android:padding="12dp"
                android:background="@drawable/login_input_background"
                android:layout_marginBottom="24dp" />

            <!-- Login Button -->
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:textColor="#000"
                android:backgroundTint="@color/yellow"
                android:padding="12dp"
                android:textStyle="bold"
                android:elevation="02dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/resetPasswordButton"
            android:layout_below="@+id/login_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Passowrd?"
            android:textColor="#5454dd"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>