<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"/>

        <LinearLayout
            android:id="@+id/grievance_requests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_below="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                android:background="@drawable/home_card"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_grievance_title_all"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:id="@+id/grievance_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_grievance_total"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/grievance_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_grievance_all"
                    android:textSize="13sp"
                    android:textColor="@android:color/darker_gray"/>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="4"
                    android:rowCount="1"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp">

                    <LinearLayout
                        android:layout_width="71dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/icon_pending"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onGrievanceIconClick"
                            android:src="@drawable/home_ic_progress" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_grievance_pending"
                            android:gravity="center"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="71dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/icon_inProgress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onGrievanceIconClick"
                            android:src="@drawable/home_ic_pending" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_grievance_inProgress"
                            android:gravity="center"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="71dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/icon_confirmation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onGrievanceIconClick"
                            android:src="@drawable/home_ic_resolved" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_grievance_confirmation"
                            android:gravity="center"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="71dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/icon_completed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onGrievanceIconClick"
                            android:src="@drawable/home_ic_completed" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_grievance_completed"
                            android:gravity="center"
                            android:textSize="12sp"/>
                    </LinearLayout>

                </GridLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/grievance_type_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_card"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_below="@+id/grievance_requests">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_grievance_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="4"
                android:layout_gravity="center"
                android:layout_marginTop="40dp">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/icon_academic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onGrievanceTypeIconClick"
                        android:src="@drawable/home_ic_academic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_type_academic"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/icon_administrative"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onGrievanceTypeIconClick"
                        android:src="@drawable/home_ic_administrative" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_type_administrative"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/icon_facilities"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onGrievanceTypeIconClick"
                        android:src="@drawable/home_ic_facilities" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_type_facilities"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/icon_food"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onGrievanceTypeIconClick"
                        android:src="@drawable/home_ic_food" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_type_food"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/icon_financial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onGrievanceTypeIconClick"
                        android:src="@drawable/home_ic_financial" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_type_financial"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="8dp">

                    <ImageView
                        android:id="@+id/icon_harassment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/home_ic_harassment"
                        android:onClick="onGrievanceTypeIconClick" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_type_harassment"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="8dp">

                    <ImageView
                        android:id="@+id/icon_it"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/home_ic_it"
                        android:onClick="onGrievanceTypeIconClick" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_type_it"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="8dp">

                    <ImageView
                        android:id="@+id/icon_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/home_ic_others"
                        android:onClick="onGrievanceTypeIconClick" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_type_others"
                        android:textSize="12sp"/>
                </LinearLayout>

            </GridLayout>

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
